--- a/css/basics/base.css
+++ b/css/basics/base.css
@@ -1,18 +1,18 @@
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 html {
-  color: var(--clr0);
+  color: #333;
   font-family: product;
-  line-height: 1.5;
   user-select: none;
 }
 
 body {
   font-size: 1rem;
-  margin: 0;
-  /* font-family: ; */
+  font-family: product;
 }
 
 img {
@@ -30,6 +30,4 @@ h4,
 h5,
 h6 {
   font-family: product;
-  margin: 0 0 1em;
-  line-height: 1.4;
 }
