--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,17 @@
 /* SETUP */
 @import "setup/vars.css";
-/* @import "setup/typography.css"; */
+@import "setup/typography.css";
 
 /* BASICS */
 @import "basics/base.css";
 @import "basics/layout.css";
 /* @import 'basics/helpers.css'; */
-/* @import 'basics/buttons.css'; */
+@import 'basics/buttons.css';
 
 /* COMPONENTS */
-/* @import 'components/header.css'; */
+@import 'components/header.css';
 /* @import 'components/logo.css'; */
+@import 'components/footer.css';
+
 /* MEDIA QUERIS */
 /* @import 'setup/mq.css'; */
