--- a/css/basics/buttons.css
+++ b/css/basics/buttons.css
@@ -3,10 +3,13 @@ button{
   background-color: var(--clr-3);
   border: solid 1px var(--clr-4);
   padding: 0.8em;
-  width: 200px;
+  width: 50px;
   cursor: pointer;
+  margin: 5px;
+  border-radius: 5px;
 }
 
 button:hover{
   opacity: 0.8;
+  background-color: var(--clr-primary);
 }
